--- a/styles.css
+++ b/styles.css
@@ -117,3 +117,27 @@ h2{
     text-align: center;
     font-size: 18px;
 }
+
+.third-section {
+    background-color: #E5E7EB;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+h3 {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+    text-align: center;
+}
+
+.p-third {
+    font-size: 18px;
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 300px;
+}
