--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,52 @@ h3 {
     justify-content: flex-end;
     margin-right: 300px;
 }
+
+.last-div {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.blue-container {
+    background-color: #3882f6;
+    width: 75%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    border-radius: 10px;
+}
+
+.left {
+    width: 80%;
+    margin-left: 100px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+h4 {
+    font-size: 34px;
+    color: white;
+}
+
+.last-p {
+    color:white;
+    font-size: 18px;
+}
+
+.right {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.btn-last-div {
+    background-color: #3882f6;
+    color: white;
+    width: 100px;
+    height: 40px;
+    border: 1px solid white;
+    border-radius: 10px;
+}
