--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,12 @@ h4 {
     border: 1px solid white;
     border-radius: 10px;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1F2937;
+    color: white;
+    height: 75px;
+    align-items: center;
+}
